--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <input type="blinks" id="blinks" min="0" max="10" step="4"
            placeholder="0" name="blinks" required>
 </div>
-<div> class="volume-slider-container"
-    <label for="volume">Music volume? </label>
+<div>
+    <label for="volume">Music volume?</label>
     <input type="range" id="volume" min="1" max="50" value="20" class="volume" id="volume">
 </div>
 </body>
