--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
     <label for="volume">Music volume?</label>
     <input type="range" id="volume" min="1" max="50" value="20" class="volume" id="volume">
 </div>
+<div>
+    <button for="submit">Send Birthday Message</button>
+</div>
 </body>
 </html>
