--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
     </div>
 <div>
     <label for="email">Email Address?</label>
-    <input type="[a-zA-Z0-9-_\.]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)" id="email"
+    <input type="email" id="email"
            placeholder="name@domain.com" name="email" required>
 </div>
 <div>
-    <label for="date">Date to send?</label>
-    <input type="date" id="date"
+    <label for="dateToSend">Date to send?</label>
+    <input type="date" id="dateToSend"
            placeholder="mm / dd / yyyy" name="date" required>
 </div>
 <div>
-    <label for="color">Message color?</label>
-    <input type="color" id="color"
+    <label for="messageColor">Message color?</label>
+    <input type="color" id="messageColor"
            placeholder="mm / dd / yyyy" required pattern="[0-9].\d{8}|\d{11}" name="color">
 </div>
 <div>
-    <label for="blinks">Number of blinks?</label>
-    <input type="blinks" id="blinks" min="0" max="10" step="4"
+    <label for="number">Number of blinks?</label>
+    <input type="number" id="number" min="0" max="10" step="4"
            placeholder="0" name="blinks" required>
 </div>
 <div>
