--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
            placeholder="0" name="blinks" required>
 </div>
 <div>
-    <label for="volume">Music volume?</label>
-    <input type="range" id="volume" min="1" max="50" value="20" class="volume" id="volume">
+    <label for="musicVolume">Music volume?</label>
+    <input type="range" id="musicVolume" min="0" max="50" value="20" class="volume" id="musicVolume">
 </div>
 <div>
     <button for="submit">Send Birthday Message</button>
