--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 <div>
     <label for="email">Email Address?</label>
-    <input type="email" id="email"
+    <input type="email" id="email" pattern="[a-zA-Z0-9-_\.]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*"
            placeholder="name@domain.com" name="email" required>
 </div>
 <div>
