--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 <div>
     <label for="dateToSend">Date to send?</label>
-    <input type="date" id="dateToSend"
+    <input type="dateToSend" id="dateToSend"
            placeholder="mm / dd / yyyy" name="date" required>
 </div>
 <div>
