--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div>
     <label for="dateToSend">Date to send?</label>
     <input type="date" id="dateToSend"
-           placeholder="mm / dd / yyyy" name="date" required>
+           placeholder="mm / dd / yyyy" name="dateToSend" required>
 </div>
 <div>
     <label for="messageColor">Message color?</label>
