--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <div>
     <label for="messageColor">Message color?</label>
     <input type="color" id="messageColor"
-           placeholder="mm / dd / yyyy" required pattern="[0-9].\d{8}|\d{11}" name="color">
+           placeholder="mm / dd / yyyy" required pattern="[0-9].\d{8}|\d{11}" name="messageColor">
 </div>
 <div>
-    <label for="number">Number of blinks?</label>
-    <input type="number" id="number" min="0" max="10" step="4"
+    <label for="numBlinks">Number of blinks?</label>
+    <input type="number" id="numBlinks" min="0" max="10" step="4"
            placeholder="0" name="blinks" required>
 </div>
 <div>
