--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 <div>
     <label for="musicVolume">Music volume?</label>
-    <input type="range" id="musicVolume" min="0" max="50" value="20" class="volume" id="musicVolume">
+    <input type="range" id="musicVolume" min="0" max="50" value="20" name="musicVolume" class="volume" id="musicVolume">
 </div>
 <div>
     <button for="submit">Send Birthday Message</button>
