--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div>
     <label for="numBlinks">Number of blinks?</label>
     <input type="number" id="numBlinks" min="0" max="10" step="4"
-           placeholder="0" name="numBlinks" required>
+           value="0" name="numBlinks" required>
 </div>
 <div>
     <label for="musicVolume">Music volume?</label>
